--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "test:db": "node scripts/test-db.js"
   },
   "keywords": [],
   "author": "lulu & jjinory",
@@ -11,5 +12,8 @@
   "description": "",
   "devDependencies": {
     "electron": "^40.4.1"
+  },
+  "dependencies": {
+    "pg": "^8.18.0"
   }
 }
