--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "counthub",
   "version": "1.0.0",
-  "main": "main.js",
+  "main": "js/main.js",
   "scripts": {
     "start": "electron .",
     "test:db": "node scripts/test-db.js"
