--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "electron": "^40.4.1"
   },
   "dependencies": {
+    "exceljs": "^4.4.0",
     "flatpickr": "^4.6.13",
-    "pg": "^8.18.0"
+    "pg": "^8.18.0",
+    "xlsx": "^0.18.5",
+    "xlsx-populate": "^1.21.0"
   }
 }
