--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "exceljs": "^4.4.0",
     "flatpickr": "^4.6.13",
     "pg": "^8.18.0",
+    "toastify-js": "^1.12.0",
     "xlsx": "^0.18.5",
     "xlsx-populate": "^1.21.0"
   },
