빌드할때 env 파일 추가

--- a/package.json
+++ b/package.json
@@ -29,6 +29,13 @@
     "productName": "CountHub",
     "win": {
       "target": "nsis"
-    }
+    },
+    "files": [
+      "**/*",
+      ".env"
+    ],
+    "extraResources": [
+      ".env"
+    ]
   }
 }
